# everything_finance_and_tech

./: README.md  matching_engine.md  trading_strategies.md
AI_and_ML_in_finance/deep_learning_and_maching_learning_for_trading/Stock_Apps/: Stock_ML_Data_PreProcessing_Apps.py  Stock_ML_Feature_Selection_Apps.py  Stock_ML_Predict_Apps.py  Stock_ML_Predict_Apps_Menu.py  Stock_ML_Rescale_Data_Apps.py
AI_and_ML_in_finance/nlp_and_financial_statements/: README.md  requirements.txt
AI_and_ML_in_finance/nlp_and_financial_statements/model/: ensemble_model_function_2014.py  interim_model_dict.pickle
AI_and_ML_in_finance/nlp_and_financial_statements/public codebase (not executable)/: CB1 Data Wrangling.ipynb  CB2 Data Exploration (interactive).ipynb  CB3 Statistical Analysis (interactive).ipynb  CB4 Machine Learning Implementation.ipynb  CB5 Final Analysis Interpretation (interactive).ipynb
AI_and_ML_in_finance/quantitative_analysis_and_technical_indicators/: Dual Thrust backtest.py  Heikin-Ashi backtest.py  MACD Oscillator backtest.py  Pair trading backtest.py
AI_and_ML_in_finance/quantitative_analysis_and_technical_indicators/Oil Money project/data/: brent crude nokjpy.csv  urals crude rubaud.csv  (+2 more)
AI_and_ML_in_finance/quantitative_analysis_and_technical_indicators/Ore Money project/: iron ore audeur.csv  iron ore brlaud.csv  iron ore uahusd.csv
AI_and_ML_in_finance/quantitative_analysis_and_technical_indicators/data/: bitcoin.csv  cme holidays.csv  gbpusd.csv  henry hub european options.csv  treasury yield curve rates.csv
AI_and_ML_in_finance/stock_price_prediction/decision_tree_classifier/: Algorithmic Trading.py
cs_fundamentals/: NP_Algo_Theory.md  README.md
data_structures_and_algorithms/java/.github/: dependabot.yml
getting_a_job_at_FAANG/: README.md
matching_engine/c++/RapidTrader/: README.md
matching_engine/c++/matching-cpp/: .gitignore  .gitmodules  Dockerfile  Makefile  README.md
matching_engine/c++/matching-cpp/Service/: CMakeLists.txt
matching_engines/c++/liteExchange/: .gitignore  .travis.yml  README.md
matching_engines/c++/matching-cpp/: CMakeLists.txt  conanfile.txt
matching_engines/c++/matching-cpp/Matching/: CMakeLists.txt
matching_engines/c++/matching-cpp/Matching/src/: influxdb.hpp  order_router.hpp  tcp_server.hpp
matching_engines/c++/matching-cpp/Service/src/: main.cpp
matching_engines/c++/matching-cpp/Testing/: CMakeLists.txt
matching_engines/c++/matching-cpp/Testing/Benchmark/: CMakeLists.txt
matching_engines/c++/matching-cpp/Testing/UnitTest/: CMakeLists.txt
utra_low_latency/: README.md
utra_low_latency/c++/: README.md  modern_cpp.md
utra_low_latency/java/: README.md  lmax_disruptor.md  lmax_disruptor_introduction.md  lmax_disruptor_user_guide.md
(+151 files in other folders)
